Add make migration file
